[package]
name = "raft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.3"
bincode = "1.3.2"
serde = { version = "1.0.125", features = ["derive", "rc"] }
log = "0.4.0"
env_logger = "0.8.3"